Added env variables in app.prop

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,5 @@
 Thumbs.db
 
 # Sensitive config
-src/main/resources/application.properties
-src/main/resources/application.yml
+#src/main/resources/application.properties
+#src/main/resources/application.yml
